# trainProject

./: .gitignore  pyproject.toml  text.txt
trainSite/school/: admin.py  models.py  serializers.py  urls.py  views.py
trainSite/school/migrations/: 0001_initial.py  0002_remove_statement_student_remove_statement_teacher_and_more.py
trainSite/trainSite/: asgi.py  settings.py  urls.py  yasg.py
trainproject/: pyproject.toml
trainproject/trainSite/school/: models.py  serializers.py  views.py
trainproject/trainSite/school/migrations/: 0001_initial.py
trainproject/trainSite/trainSite/: settings.py  urls.py  wsgi.py
